fool win packager again